# mad-ads

./: .env.example  .gitignore  .privacy-patterns.example  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.memory/: MEMORY.md
.memory/project/: marketing-operations-field-notes.md  operating-assumptions.md
ads/: README.md
docs/: data-contracts.md  framework-map.md  setup.md  tool-status.md  workflows.md
skills/: README.md
skills/copywriter/: SKILL.md
skills/creative-strategist/: SKILL.md
skills/customer-research/: SKILL.md
skills/media-buyer/: SKILL.md
skills/static-producer/: SKILL.md
skills/sugarman/: SKILL.md
skills/video-producer/: SKILL.md
templates/: ad-brief.md  analysis.md  angle-update.md  brand-voice.md  brand.md  creative-strategy.md  customer-research.md  founder-story.md  offers.md  products.md  visual-identity.md
tests/: test_meta_tools.py  test_skill_depth.py
tools/: REGISTRY.md  doctor.py  privacy-scan.py  run-tests.py
tools/breakeven-cpa/: README.md  compute.py
tools/check-script-length/: check.py
tools/hook-rate/: README.md  track.py
tools/meta-ads-auditor/: README.md  audit.py
tools/meta-ads-uploader/: README.md  upload.py
tools/meta_graph/: __init__.py  client.py
tools/parse-meta-csv/: parse.py
tools/tests/: test_analysis_tools.py
tools/verdicts/: README.md  validate.py
variables/: ad-funnel-classification.md  angles.md  desire-drivers.md  formats.md  hooks.md  kpis.md  market-sophistication.md  personas.md  usps.md
